--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=ProductCatalogService_Jan2025
 server.port=9080
-logging.level.root = info
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://localhost:3306/ProductCatalogService_Jan2025
+spring.datasource.username=root
+spring.datasource.password=NO
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.show-sql: true
